# general-tree-data-structure-cpp

./: .gitignore  CMakeLists.txt  README.md  general-tree.h
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  general_tree_tests  general_tree_tests_include-b858cb2.cmake  general_tree_tests_tests-b858cb2.cmake
test/specs/: iterators.test.cpp  null-safety.test.cpp  operators.test.cpp  parent-pointers.test.cpp
